--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,11 @@
 site_name: MUSWAH
 theme:
   name: material
+  palette: 
+    scheme: slate
+nav:
+    - Home: index.md
+    - Get Involved: get-involved.md
+    - Contributors: contributors.md
+extra_css:
+  - stylesheets/extra.css
