--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,15 +3,16 @@ theme:
   name: material
   icon: 
     logo: material/content-save-check
-  palette: 
-    scheme: slate
+  # palette: 
+  #   scheme: slate
 nav:
     - Home: index.md
     - Contributors: contributors.md
-    - Resources: resources.md
+    # - Resources: resources.md
 extra_css:
   - stylesheets/extra.css
 markdown_extensions:
   - attr_list
   - md_in_html
+  - def_list
 
